[workspace]
members = [
  ".",
  "libsamplerate-rs",
]

[package]
name = "resample"
version = "0.0.0"
edition = "2021"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/d-e-s-o/resample"
documentation = "https://docs.rs/resample"
categories = [
  "algorithms",
  "api-bindings",
  "multimedia::audio",
]
keywords = [
  "audio",
  "convert",
  "resample",
  "samplerate",
  "stream",
]
description = "A library based on libsamplerate for converting samplerates"

[dependencies]
libsamplerate-rs = { version = "0.1", path = "libsamplerate-rs" }

[dev-dependencies]
hound = "3.4"
rstest = "0.6"
