[workspace]
members = [
  ".",
  "libsamplerate-rs",
]

[package]
name = "resample"
version = "0.0.0"
edition = "2021"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/d-e-s-o/resample"
documentation = "https://docs.rs/resample"
categories = [
  "algorithms",
  "api-bindings",
  "multimedia::audio",
]
keywords = [
  "audio",
  "convert",
  "resample",
  "samplerate",
  "stream",
]
description = "A library based on libsamplerate for converting samplerates"

[dependencies]
libsamplerate-rs = { version = "0.1", path = "libsamplerate-rs" }

[dev-dependencies]
hound = "3.4"
rstest = "0.6"

[lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-debug-implementations = "warn"
trivial-numeric-casts = "warn"
unsafe-op-in-unsafe-fn = "warn"
unused = "warn"

[lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
diverging-sub-expression = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
type-complexity = "allow"
absolute-paths = "warn"
allow-attributes = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
derive-partial-eq-without-eq = "warn"
doc-markdown = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
multiple-unsafe-ops-per-block = "warn"
redundant-closure-for-method-calls = "warn"
unchecked-duration-subtraction = "warn"
undocumented-unsafe-blocks = "warn"
uninlined-format-args = "warn"
use-self = "warn"
wildcard-imports = "warn"
