[package]
name = "libsamplerate-rs"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "BSD-2-Clause"
repository = "https://github.com/d-e-s-o/resample.git"
categories = [
  "algorithms",
  "external-ffi-bindings",
  "multimedia::audio",
]
keywords = [
  "audio",
  "convert",
  "resample",
  "samplerate",
  "stream",
]
description = """
c2rust transpiled version of libsamplerate.
"""

[dependencies]
libc = "0.2"

[lints.rust]
unused-unsafe = "allow"

[lints.clippy]
assign-op-pattern = "allow"
collapsible-else-if = "allow"
collapsible-if = "allow"
diverging-sub-expression = "allow"
excessive-precision = "allow"
let-and-return = "allow"
let-unit-value = "allow"
missing-safety-doc = "allow"
module-inception = "allow"
needless-return = "allow"
nonminimal-bool = "allow"
precedence = "allow"
type-complexity = "allow"
unnecessary-cast = "allow"
zero-ptr = "allow"
